--- a/Portfolio Website May 13 2022/mystyle.css
+++ b/Portfolio Website May 13 2022/mystyle.css
@@ -11,11 +11,27 @@
       
         #sarah{
             background-color:#C0C0C0 ;
-            height: 45%;
-            width: 16%;
-            margin-top: 4%;
+            height: 40%;
+            width: 100%;
+            margin-top: 0%;
             border-radius: 0px 60px 60px 0px;
+            
     
+        }
+        #profileimg{
+            height: 100%;
+            width: 100%;
+            border-radius: 20px 20px 20px 20px;
+        }
+        #displayimg{
+            width: 35%;
+            height: 30%;
+            margin-top: 10%;
+            margin-left: 25%;
+            float: left;
+            background-position: center;
+            background-size: cover;
+            border-radius: 20px 20px 20px 20px;
         }
         #wimg{
             width: 30%;
@@ -24,12 +40,13 @@
             margin-top: 20%;
         }
         #plinks{
-            background-color: transparent ;
+            background-color: transparent;
             height: 40%;
-            width: 12%;
-            margin-top: 0;
+            width: 100%;
+            margin-top: 12%;
             float:left;
             margin-left: 2%;
+        
         }
         a{
             text-decoration: none;
@@ -65,7 +82,7 @@
            
             position: fixed;
             left: 22%;
-            top: 20%;
+            top: 30%;
             height: 80px;
             width: 80px;
             border-radius: 50%;
@@ -81,8 +98,8 @@
         #slide{
             position: fixed;
             float: right;
-            margin-right: 2%;
-            top: 20%;
+            margin-right: 3%;
+            top: 30%;
             height: 80px;
             width: 80px;
             border-radius: 50%;
@@ -94,6 +111,8 @@
         }
         #e11,#e112{
             color: white;
+            top: 50%;
+            text-align: center;
         }
         #nbooks{
             background-color: transparent;
@@ -362,10 +381,14 @@
          background-color:transparent;
          color: black;
      }
+     #author11,#author12,#author13{
+       margin-top: 0%;
+     }
      #saraw{
          width: 100%;
-         height: auto;
+         height: 25%;
          background-color: transparent;
+         margin-top: 50%;
      }
      F
      #label, #label2, #label3, #label4, #label5{
@@ -378,4 +401,15 @@
          text-align: center;
          color: black;
     
+     }
+     #namelog,#Welcomeid{
+         float: left;
+         margin-left: 25%;
+         position: absolute;
+     }
+     #sidem{
+         background-color: transparent;
+         height:100%;
+         width: 16%;
+         position: fixed;
      }
