--- a/Portfolio Website May 13 2022/mystyle.css
+++ b/Portfolio Website May 13 2022/mystyle.css
@@ -521,38 +521,63 @@
         width: 20px;
         height: 20px; 
      }
-#myBtn,#myBtn1{
+#myBtn,#myBtn1,#myBtn3,#myBtn4,#myBtn5,#myBtn6,#myBtn7{
     height: 70%;
            width: 100%;
            border-radius: 30px 30px 30px 30px;
            float: right; 
            border-width: 0px;
+           opacity: 10;
 }
-#namentop1,#namentop2{
+#namentop1,#namentop2,#namentop4,#namentop5,#namentop6,#namentop6,#namentop7{
     width: 100%;
     height: 20%;
     background-color:transparent;
     margin-top: 138%;
 }
-#imgb11,#imgb12{
+#imgb11,#imgb12,#imgb13,#imgb14{
     width: 30%;
     height: 40%;
+    float: left;
+    margin-left: 5%;
+    margin-top: 5%;
 
 }
-#divpar1,#divpar2{
+#divpar1,#divpar2,#divpar3,#divpar4,#divpar5,#divpar6,#divpar7{
     height: 40%;
     width: 80%;
+    float: left;
+    margin-top: 2%;
+    margin-left: 5%;
     background-color:wheat;
 }
-     #adcbtn{
-         height: 10%;
-         width: 20%;
+     #adcbtn,#adcbtn2,#adcbtn3,#adcbtn4,#adcbtn5,#adcbtn6,#adcbtn7{
+         height: 5%;
+         width: 10%;
          background-color: orange;
          color: white;
-border-width: 0px;
-         margin-top: 5%;
-         border-radius: 30px 30px 30px 30px;
         
+        
+         float: left;
+     margin-left: 43.5%;
+         border-color: white;
+
+border-width: 5px;
+         margin-top: 2%;
+         border-radius: 0px 0px 0px 0px;
+        
+     }
+     #price{
+      background-color: orange;
+       height: 8%;
+       width: 10%;
+       text-align: center;
+     float: left;
+     margin-left: 50%;
+     margin-top: -2%;
+     color: white;
+    
+
      }
 
 
@@ -642,6 +667,221 @@ border-width: 0px;
   
   .close1:hover,
   .close1:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+
+
+  /*///////////////////////////////////////////////////////////////////////////////*/
+/* The Modal (background) */
+.modal2 {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content2 {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+    height: 70%;
+  }
+  
+  /* The Close Button */
+  .close2 {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close2:hover,
+  .close2:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+   
+
+
+  /*///////////////////////////////////////////////////////////////////////////////*/
+/* The Modal (background) */
+.modal3 {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content3 {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+    height: 70%;
+  }
+  
+  /* The Close Button */
+  .close3 {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close3:hover,
+  .close3:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+    
+
+
+  /*///////////////////////////////////////////////////////////////////////////////*/
+/* The Modal (background) */
+.modal4 {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content4 {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+    height: 70%;
+  }
+  
+  /* The Close Button */
+  .close4 {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close4:hover,
+  .close4:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+     
+
+
+  /*///////////////////////////////////////////////////////////////////////////////*/
+/* The Modal (background) */
+.modal5 {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content5 {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+    height: 70%;
+  }
+  
+  /* The Close Button */
+  .close5 {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close5:hover,
+  .close5:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+      
+
+
+  /*///////////////////////////////////////////////////////////////////////////////*/
+/* The Modal (background) */
+.modal6 {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content6 {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+    height: 70%;
+  }
+  
+  /* The Close Button */
+  .close6 {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close6:hover,
+  .close6:focus {
     color: #000;
     text-decoration: none;
     cursor: pointer;
