--- a/Portfolio Website May 13 2022/mystyle.css
+++ b/Portfolio Website May 13 2022/mystyle.css
@@ -55,9 +55,10 @@
   font-size: 60px;
 }
 .overlay1 {
-  height: 80%;
-  width: 100%;
-  margin-top: 5%;
+  height: 50%;
+  width: 50%;
+  margin-top: 15%;
+  margin-left: 25%;
   display: none;
   position: fixed;
   z-index: 1;
@@ -87,8 +88,10 @@
   font-size: 60px;
 }
 .overlay2 {
-  height: 100%;
-  width: 100%;
+  height: 50%;
+  width: 50%;
+  margin-top: 15%;
+  margin-left: 25%;
   display: none;
   position: fixed;
   z-index: 1;
@@ -126,8 +129,10 @@
   font-size: 60px;
 }
 .overlay3 {
-  height: 100%;
-  width: 100%;
+  height: 50%;
+  width: 50%;
+  margin-top: 15%;
+  margin-left: 25%;
   display: none;
   position: fixed;
   z-index: 1;
@@ -165,8 +170,10 @@
   font-size: 60px;
 }
 .overlay4 {
-  height: 100%;
-  width: 100%;
+  height: 50%;
+  width: 50%;
+  margin-top: 15%;
+  margin-left: 25%;
   display: none;
   position: fixed;
   z-index: 1;
@@ -204,8 +211,10 @@
   font-size: 60px;
 }
 .overlay5 {
-  height: 100%;
-  width: 100%;
+  height: 50%;
+  width: 50%;
+  margin-top: 15%;
+  margin-left: 25%;
   display: none;
   position: fixed;
   z-index: 1;
@@ -243,8 +252,10 @@
   font-size: 60px;
 }
 .overlay6 {
-  height: 100%;
-  width: 100%;
+  height: 50%;
+  width: 50%;
+  margin-top: 15%;
+  margin-left: 25%;
   display: none;
   position: fixed;
   z-index: 1;
@@ -282,8 +293,10 @@
   font-size: 60px;
 }
 .overlay7 {
-  height: 100%;
-  width: 100%;
+  height: 50%;
+  width: 50%;
+  margin-top: 15%;
+  margin-left: 25%;
   display: none;
   position: fixed;
   z-index: 1;
@@ -1222,7 +1235,7 @@ a.btn:hover{
 }
 main{
   background: #fff;
-  padding:: 20px;
+  padding: 20px;
   
 }
 
@@ -1318,4 +1331,8 @@ code{
     border:1px solid #ddd;
     padding: 2px;
     border-radius: 2px;
+}
+.product-image {
+  height: 20%;
+
 }
